Added GetEmployeeClockInServiceMapper map clock ins to clock ins by week implementation and tests.